<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_general" >
	<!-- android:background="@color/gris_claro" -->
    <LinearLayout
        android:id="@+id/llTipoConfiguracion"
        android:background="@drawable/linearlayout_configuration_states"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:orientation="vertical"
        android:paddingLeft="@dimen/paddingLeftConfiguration"
        android:paddingTop="@dimen/paddingTopConfiguration"
        android:paddingBottom="@dimen/paddingBottomConfiguration" >
        
        <TextView
            android:id="@+id/textViewMTTipoConfiguracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mtTipoConfiguracion"
            android:textSize="@dimen/mt"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewSTTipoConfiguracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stTipoConfiguracion"
            android:textSize="@dimen/st" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConceptos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/textViewGestionConceptos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConceptos"
            android:textSize="@dimen/st"
            android:textColor="@color/blanco"
            android:background="@color/dim_gray"
            android:paddingLeft="@dimen/paddingLeftConfiguration" />

        <LinearLayout
            android:id="@+id/llConceptosIngresos"
            android:background="@drawable/linearlayout_configuration_states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration"
        	android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:orientation="vertical"
             >

            <TextView
                android:id="@+id/textViewMTConceptosIngresos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtIngresos"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />            

            <TextView
                android:id="@+id/textViewSTConceptosIngresos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stIngresos"
                android:textSize="@dimen/st" />

        </LinearLayout>

        <View
            android:background="#808080"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/lineView" />

        <LinearLayout
            android:id="@+id/llConceptosGastos"
            android:background="@drawable/linearlayout_configuration_states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration"
        	android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:orientation="vertical"                        
        	 >

            <TextView
                android:id="@+id/textViewMTConceptosGastos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtGastos"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSTConceptosGastos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stGastos"
                android:textSize="@dimen/st" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOtrasOpciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewOtrasOpciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:text="@string/tvOtrasOpciones"
            android:textSize="@dimen/st"
            android:textColor="@color/blanco"
            android:background="@color/dim_gray" />

        <LinearLayout
            android:id="@+id/llInformes"
            android:background="@drawable/linearlayout_configuration_states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration"
        	android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:orientation="vertical"
            
             >

            <TextView
                android:id="@+id/textViewMTOtrasOpciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtInformes"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewSTOtrasOpciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stInformes"
                android:textSize="@dimen/st" />

        </LinearLayout>

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:text="@string/tvCopiaSeguridad"
            android:textSize="@dimen/st"
            android:textColor="@color/blanco"
            android:background="@color/dim_gray" />
        
        <LinearLayout
            android:id="@+id/llDumpDB"
            android:background="@drawable/linearlayout_configuration_states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration"
        	android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:orientation="vertical" >

            <TextView                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtDumpDB"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stDumpDB"
                android:textSize="@dimen/st" />

        </LinearLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/lineView"
            android:background="#808080" />
        
        <LinearLayout
            android:id="@+id/llLoadDB"
            android:background="@drawable/linearlayout_configuration_states"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingLeftConfiguration"
            android:paddingTop="@dimen/paddingTopConfiguration"
        	android:paddingBottom="@dimen/paddingBottomConfiguration"
            android:orientation="vertical" >

            <TextView                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mtLoadDB"
                android:textSize="@dimen/mt"
                android:textStyle="bold" />

            <TextView                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stLoadDB"
                android:textSize="@dimen/st" />

        </LinearLayout>
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/lineView"
            android:background="#808080" />
        
    </LinearLayout>

</LinearLayout>